@@ -2043,17 +2043,6 @@
     FT_Stroker_Set( status.stroker, 32, FT_STROKER_LINECAP_BUTT,
                       FT_STROKER_LINEJOIN_BEVEL, 0x20000 );
 
-    display = FTDemo_Display_New( gr_pixel_mode_rgb24,
-                                  status.width, status.height );
-    if ( !display )
-      Fatal( "could not allocate display surface" );
-
-    grid_status_display( &status, display );
-    grid_status_colors(  &status, display );
-
-    grSetTitle( display->surface,
-                "FreeType Glyph Grid Viewer - press ? for help" );
-
     for ( ; argc > 0; argc--, argv++ )
     {
       error = FTDemo_Install_Font( handle, argv[0], 1,
@@ -2065,6 +2054,17 @@
 
     if ( handle->num_fonts == 0 )
       Fatal( "could not find/open any font file" );
+
+    display = FTDemo_Display_New( gr_pixel_mode_rgb24,
+                                  status.width, status.height );
+    if ( !display )
+      Fatal( "could not allocate display surface" );
+
+    grSetTitle( display->surface,
+                "FreeType Glyph Grid Viewer - press ? for help" );
+
+    grid_status_display( &status, display );
+    grid_status_colors(  &status, display );
 
     event_font_change( 0 );
 
