@@ -1,3 +1,7 @@
+2018-05-08  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftgrid.c (main): Fail to open font earlier.
+
 2018-05-01  Werner Lemberg  <wl@gnu.org>
 
 	* Version 2.9.1 released.
